--- a/others/js.html
+++ b/others/js.html
@@ -33,65 +33,62 @@
     let sanbox1 = new ProxySandbox();
     let sanbox2 = new ProxySandbox();
     window.a = 1;
-    ((window) => {
-      window.a = 'hello';
-      console.log(window.a);
-    })(sanbox1.proxy)
-    ((window) => {
-      window.a = 'world';
-      console.log(window.a);
-    })(sanbox2.proxy)
 
 
 
     // => 2、快照沙箱：将应用更改前后的区别保存起来，然后在两个应用的切换时，将这个区别进行填补或撤回，用这个的目的是为了还原
-    class SnapshotSandbox{
-      constructor(){
-        this.proxy = window;
-        this.modifyPropsMap = {};
-        this.active();
-      }
-      active(){
-        // 激活时候给window拍照,这个对象存放window的所有属性
-        this.windowSnapshot = {};
-        // 拷贝的是引用，做了一层浅拷贝就行
-        for(const prop in window){
-          if(window.hasOwnProperty(prop)){
-            this.windowSnapshot[prop] = window[prop];
-          }
-        }
-        // 激活时候，把上次修改应用起来
-        Object.keys(this.modifyPropsMap).forEach(p=>{
-          window[p] = this.modifyPropsMap[p]
-        })
-      }
-      inactive(){
-        // 激活时候给window拍照,这个对象存放window的所有属性
-        this.windowSnapshot = {};
-        for(const prop in window){
-          if(window.hasOwnProperty(prop)){
-            if(window[prop] !== this.windowSnapshot[prop]){
-              // 与之前的相比，如果有发生变化，则存放到变化表中
-              this.modifyPropsMap[prop] = window[prop];
-              window[prop] = this.windowSnapshot[prop];
-            }
-          }
-        }
-      }
-    }
+    // class SnapshotSandbox{
+    //   constructor(){
+    //     this.proxy = window;
+    //     this.modifyPropsMap = {};
+    //     this.active();
+    //   }
+    //   active(){
+    //     // 激活时候给window拍照,这个对象存放window的所有属性
+    //     this.windowSnapshot = {};
+    //     // 拷贝的是引用，做了一层浅拷贝就行
+    //     for(const prop in window){
+    //       if(window.hasOwnProperty(prop)){
+    //         this.windowSnapshot[prop] = window[prop];
+    //       }
+    //     }
+    //     // 激活时候，把上次修改应用起来
+    //     Object.keys(this.modifyPropsMap).forEach(p=>{
+    //       window[p] = this.modifyPropsMap[p]
+    //     })
+    //   }
+    //   inactive(){
+    //     // 激活时候给window拍照,这个对象存放window的所有属性
+    //     this.windowSnapshot = {};
+    //     for(const prop in window){
+    //       if(window.hasOwnProperty(prop)){
+    //         if(window[prop] !== this.windowSnapshot[prop]){
+    //           // 与之前的相比，如果有发生变化，则存放到变化表中
+    //           this.modifyPropsMap[prop] = window[prop];
+    //           window[prop] = this.windowSnapshot[prop];
+    //         }
+    //       }
+    //     }
+    //   }
+    // }
 
-    // 使用快照方式的测试（这个方式还有一个缺点， 就是如果是多个子应用就不能使用这个方式了，这时可以使用es6的Proxy）
-    let sanbox = new SnapshotSandbox();
-    ((window) => {
-      window.a = 1;
-      window.b = 2;
-      console.log(window.a, window.b);
-      sanbox.inactive();
-      console.log(window.a, window.b);
-      sanbox.active();
-      console.log(window.a, window.b);
-    })(sanbox.proxy)
+    // // 使用快照方式的测试（这个方式还有一个缺点， 就是如果是多个子应用就不能使用这个方式了，这时可以使用es6的Proxy）
+    // let sanbox = new SnapshotSandbox();
+    // ((window) => {
+    //   window.a = 1;
+    //   window.b = 2;
+    //   console.log(window.a, window.b);
+    //   sanbox.inactive();
+    //   console.log(window.a, window.b);
+    //   sanbox.active();
+    //   console.log(window.a, window.b);
+    // })(sanbox.proxy)
 
+  </script>
+  <script src="./1.js"></script>
+  <script src="./2.js"></script>
+  <script>
+    console.log(window.a);
   </script>
 </body>
 </html>
